--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
 <body id="main-body" class="flex-container">
 
     <div id="interactivemap" id class="flex-child left">
+        <div class="logo" ><img src="logo.png"></div>
         <div id="map-europe" id>
             <ul class="europe">
             <li class="eu1"><a href="#albania">Albania</a></li>
@@ -75,29 +76,37 @@
     <div id="spotify" id >
             <div id="demo-agents">
                 <ul>
-                    <li id="portugal" >
-                        PORTUGAL
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWTXFWnuwReqb?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <li id="france">
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWXLbJb1PtkXq?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     </li>
 
-                <li id="netherlands">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWWu1NXpHyPJK?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                     
+                    <li id="netherlands">
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWWu1NXpHyPJK?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                     
+                    </li>
+
+                    <li id="portugal" >
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWTXFWnuwReqb?utm_source=generator&theme=0" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX81SpMyxQtv5?utm_source=generator&theme=0" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX17E3cXq3hn3?utm_source=generator&theme=0" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DXbCopOlsBnv4?utm_source=generator&theme=0" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYjjOmuB9ehg?utm_source=generator&theme=0" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
                 </li>
 
-                <!-- <li id="spain">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWU4xtX4v6Z9l?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> 
+                <li id="spain">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWU4xtX4v6Z9l?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> 
                  </li> 
- -->
+
                 </ul>
             </div>
         </div>
         
 
-        <div id="spotifyplayer">
+        <div id="spotifyplayerbeta">
             <script src="https://sdk.scdn.co/spotify-player.js"></script>
             <script>
             window.onSpotifyWebPlaybackSDKReady = () => {
-                const token = 'BQD68J5GmpDv4NyH3g5PVCBdJkAdZTC02nIAXA2rxL5GYeQdSLaci8rBQOzFHmdvKXEqwk5IPktvICCwzmTTl2w53JBIQQZLGhqBd0d_lgkFD14fnmJrlTPFlhSBGgqEkqZ4XCk9F99Hggq-HqqPwTS_uAXsLiPbX2JNABwOmEa_zgrQ1diMhp-18Nbf7lpE';
+                const token = 'BQCAp9r62Wr-vWwyreZgsEtI9BaqQQAyarAyBGBNjKAZRUw0z7uVLrsgQt11NqaWef0YqGEnZo2pYnqt66nRbzQU6FUakb0yXBhtomeBiGmNFdvZiXmYllY86YxwYY0e6cfUPg12xnPrXeavZVXiPWEDb_VOxFW_nlLTvRgywSQxblyRA5oEpvMHlGAE83Xd';
                 const player = new Spotify.Player({
                   name: 'Spotify map',
                   getOAuthToken: cb => { cb(token); },
