country lists for reference changed to UK instead of england etc test output for getting playlist things get playlists  makes requests  can read the requests  needs to write it now

--- a/index2.html
+++ b/index2.html
@@ -67,12 +67,12 @@
             <li class="eu44"><a href="#switzerland">Switzerland</a></li>
             <li class="eu45"><a href="#turkey">Turkey</a></li>
             <li class="eu46"><a href="#ukraine">Ukraine</a></li>
-            <!-- <li class="eu47"><a href="#united-kingdom">United Kingdom</a></li> -->
-            <li class="eu48"><a href="#england">England</a></li>
+            <li class="eu47"><a href="#united-kingdom">United Kingdom</a></li> 
+            <!-- <li class="eu48"><a href="#england">England</a></li>
             <li class="eu49"><a href="#isle-of-man">Isle of Man</a></li>
             <li class="eu50"><a href="#northern-ireland">Northern Ireland</a></li>
             <li class="eu51"><a href="#scotland">Scotland</a></li>
-            <li class="eu52"><a href="#wales">Wales</a></li>
+            <li class="eu52"><a href="#wales">Wales</a></li>-->
             </ul>
         </div>
     </div>
