made the grid look good
almost good. need to resize images

--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,7 @@
       window.onload = function() {
         displayPlaylists("playlists");
       }
+      
     </script>
 
 </head>
@@ -81,6 +82,12 @@
 
     <div id="spotify" id >
             <div id="demo-agents">
+                
+                <script src="app.js"></script>
+                <script>
+                //call the function 
+                resizeImages();
+                </script>
                 <ul id="playlists" class="playlists"></ul>
             </div>
         </div>
