Hover works now. toggles fixed can hover and see description of playlist. toggles also fixed

--- a/index2.html
+++ b/index2.html
@@ -80,14 +80,14 @@
 
         <div class="switch-container">
             <div class="toggle-container">
-                <span class="switch_label">Spotify lists</span>
+                <span class="switch_label">Spotify made</span>
                 <label class="switch" id="toggle-button-spotify">
                     <input type="checkbox" checked>
                     <span class="slider round"></span>
                 </label>
             </div>
             <div class="toggle-container">
-                <span class="switch_label">User lists</span>
+                <span class="switch_label">User made</span>
                 <label class="switch" id="toggle-button-user">
                     <input type="checkbox" checked>
                     <span class="slider round"></span>
