Image doenst scale anymore
fixed so image is always the 850

--- a/index2.html
+++ b/index2.html
@@ -23,9 +23,9 @@
         $(document).ready(function(){
         
         $("#map-europe").CSSMap({
-            "mapStyle": "vintage",
+            "mapStyle": "default",
             "tooltips": false,
-            "size": 960,
+            "size": 850,
             "agentsList": {
                 "enable": true,
                 "agentsListId": "#demo-agents",
