Fixed some formatting issues

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </script>
 
         <div style="position: relative;"> 
-            <iframe id="embedded_player" style="position: absolute; display:block" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX6HJZtcjGrCn?utm_source=generator&theme=0" width="200%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe id="embedded_player" style="position: absolute; display:block; width: 100vw" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX6HJZtcjGrCn?utm_source=generator&theme=0" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
         </div>
         <div style="background-color: #00d755 ; height: 5px; width: 200%; position: absolute;"></div>
