Added favicon and title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 
 <head>
+    <title>Mapify</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <!-- CSS styly sheets-->
     <link rel="stylesheet" type="text/css" href="cssmap-europe/cssmap-europe.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="includes/style.css" media="all" />
