--- a/faq.html
+++ b/faq.html
@@ -18,8 +18,8 @@
     <p>Currently only European countries you can hover over are supported. This started as a personal project to hear more music from countries in Europe. There are currently no plans to expand to other continents. If you would like other continents send me an email or leave a commen on github (see link below).</p></h3>
     <h3>How often are the playlists updated?
     <p>The playlists are updated once every few months by performing new searches via the Spotify API.</p></h3>
-    <h3>How can I save or share a playlist?
-    <p>Currently there is no way to do so. You will ahve to open the playlist in Spotify by clicking th Spotify icon in the top right of the player</p></h3>
+    <h3>How can I save, follow or share a playlist?
+    <p>Currently there is no way to do so. You will ahve to open the playlist in Spotify by clicking on the name of the playlist in the player</p></h3>
     <h3>What is the purpose of this site?
     <p>Hobby project</p></h3>
   </section>
