--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>
-    <title>Mapify</title>
+    <title>Spotify map playlist</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script data-goatcounter="https://keplerfrequency.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
