Improved playlist selection

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 
     <div id="spotifyplayerbeta" class="flex-child bottom">
         <div id="seperator">
-            <div id="donate_link"><a href="https://u24.gov.ua/" target="_blank">Enjoying the website? Contribute here!</a></div>
+            <div id="donate_link"><a href="https://u24.gov.ua/" data-goatcounter-click="ext-u24.gov.ua/">Example</a>
+                target="_blank">Enjoying the website? Contribute here!</a></div>
         </div> 
         
         <div style="position: relative;"> 
