--- a/faq.html
+++ b/faq.html
@@ -16,18 +16,20 @@
     <h2>Frequently Asked Questions</h2>
     <h3>What countries are currently supported by the website?
     <p>Currently only European countries you can hover over are supported. This started as a personal project to hear more music from countries in Europe. There are currently no plans to expand to other continents. If you would like other continents send me an email or leave a commen on github (see link below).</p></h3>
+    <h3>Why does country X have playlists from country Y?
+    <p>Spotify search does this sometimes. Searching for playlists from country X can sometimes give results from adjacent countries or countries with similar sounding names</p></h3>
     <h3>How often are the playlists updated?
-    <p>The playlists are updated once every few months by performing new searches via the Spotify API.</p></h3>
+    <p>The playlists are updated once every few months by performing new searches via the Spotify API</p></h3>
     <h3>How can I save, follow or share a playlist?
     <p>Currently there is no way to do so. You will ahve to open the playlist in Spotify by clicking on the name of the playlist in the player</p></h3>
     <h3>What is the purpose of this site?
-    <p>Hobby project</p></h3>
+    <p>Hobby project. If you enjoy the project use the donation link to donate to 🇺🇦 Ukraine 🇺🇦</p></h3>
   </section>
 
   <section id="troubleshooting">
     <h2>Troubleshooting</h2>
     <h3>I can't find the country I'm looking for
-    <p>The country should be clickable, otherwise it is currently not supported.</p></h3>
+    <p>The country should be clickable, otherwise it is currently not supported</p></h3>
     <h3>The website is not loading properly
     <p>Try using either Chrome or Mozilla. These are the most tested browsers</p></h3>
     <h3>The website looks bad on my phone
