--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </div>
 
     <div id="FAQ">
-        <a id="FAQ_text" href="/faq.html" data-goatcounter-click="faq.html">FAQ</a>        
+        <a id="FAQ_text" href="faq.html" data-goatcounter-click="faq.html">FAQ</a>        
     </div>
 
 </body>
