Added a Login to Spotify button
Can now ask for a spotify token by clicking the button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Scripts -->
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="spotify_login.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cssmapsplugin.com/5/jquery.cssmap.min.js"></script>      
     <script type="text/javascript">
@@ -36,6 +37,10 @@
 </head>
 
 <body id="main-body" class="flex-container">
+
+    <div id="login" class="login_div">
+        <p class="login_text">Login to Spotify!</p>
+    </div>
 
     <div id="interactivemap" id class="flex-child left">
         
