Popup for 1st time visitors
explanation of what can be done on the website.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
 
 </head>
 
+
+
 <body id="main-body" class="flex-container">
+
+    <div id="popup" class="popup">
+        <div class="popup-content"   style="background-color:#00d755; color:#272727;">
+          <h3 style="color:#272727">Welcome to Spotify maps</h3>
+          <p>On this site you can browse playlsits by each country, toggle whether it is Spotify or user made and search through the pre-chosen playlists.</p>
+          <button onclick="closePopup()">Close</button>
+        </div>
+    </div>
+      
 
     <div id="login" class="login_div">
         <p class="login_text">Login to Spotify!</p>
