Fixed search in chrome

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="spotify_login.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript"src="jquery-3.6.3.min.js"></script>
     <script type="text/javascript" src="https://cssmapsplugin.com/5/jquery.cssmap.min.js"></script>      
     <script type="text/javascript">
         $(document).ready(function(){
@@ -132,7 +133,7 @@
 
     <div id="playlist_repository" class="flex-child right">
         <div id="search_bar">
-            <input type="text" id="search" oninput="searchPlaylist()" placeholder="Search through playlists">
+            <input type="text" id="search" placeholder="Search through playlists">
         </div>
         
         <div id="demo-agents-wrapper" >
