--- a/faq.html
+++ b/faq.html
@@ -15,13 +15,13 @@
   <section id="faq">
     <h2>Frequently Asked Questions</h2>
     <h3>What countries are currently supported by the website?
-    <p>Currently only European countries you can hover over are supported. This started as a personal project to hear more music from countries in Europe. There are currently no plans to expand to other continents. If you would like other continents send me an email or leave a commen on github (see link below).</p></h3>
+    <p>Currently only European countries you can hover over are supported. This started as a personal project to hear more music from countries in Europe. There are currently no plans to expand to other continents. If you would like other continents send me an email or leave a comment on github (see link below).</p></h3>
     <h3>Why does country X have playlists from country Y?
     <p>Spotify search does this sometimes. Searching for playlists from country X can sometimes give results from adjacent countries or countries with similar sounding names</p></h3>
     <h3>How often are the playlists updated?
     <p>The playlists are updated once every few months by performing new searches via the Spotify API</p></h3>
     <h3>How can I save, follow or share a playlist?
-    <p>Currently there is no way to do so. You will ahve to open the playlist in Spotify by clicking on the name of the playlist in the player</p></h3>
+    <p>Currently there is no way to do so. You will have to open the playlist in Spotify by clicking on the name of the playlist in the player</p></h3>
     <h3>What is the purpose of this site?
     <p>Hobby project. If you enjoy the project use the donation link to donate to 🇺🇦 Ukraine 🇺🇦</p></h3>
   </section>
@@ -41,7 +41,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <h3>Contact information: <p></p>keplerfrequency@gmail.com</p></h3>
-    <h3>To report bugs or request new features go to <p>[insert github link]</p></h3>
+    <h3>To report bugs or request new features go to <p>https://github.com/keplerfrequency/spotify_map</p></h3>
   </section>
 
   <div id="return">
