Removal of spotify name and usage
Chnage logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div id="interactivemap" id class="flex-child left">
         
-        <div id="logo" class="logo" ><img src="logo_real.svg"></div>
+        <div id="logo" class="logo" ><img src="logo.png"></div>
                
         <div id="map-europe">
             <ul class="europe">
@@ -155,7 +155,7 @@
     </div>
 
     <div id="FAQ">
-        <p id="disclaimer_text">Spotify Maps 2025 </p>
+        <p id="disclaimer_text">MusicMapify 2025 </p>
         <a id="info_text"href="https://u24.gov.ua/" data-goatcounter-click="ext-u24.gov.ua/" target="_blank">Enjoying the website? Contribute here!</a>
         <a id="FAQ_text" href="faq.html" data-goatcounter-click="faq.html">FAQ</a>
     </div>
