--- a/faq.html
+++ b/faq.html
@@ -45,7 +45,7 @@
   </section>
 
   <div id="return">
-    <a href="/index.html" style="color: white;">Return to webstie</a> 
+    <a href="../" style="color: white;">Return to webstie</a> 
   </div>
 
 </body>
