update on where to report bugs
quick change to show hyperlink to github page

--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <h3>Contact information: <p></p>keplerfrequency@gmail.com</p></h3>
-    <h3>To report bugs or request new features go to <p>https://github.com/keplerfrequency/spotify_map</p></h3>
+    <h3>To report bugs or request new features go to <p><a href="https://github.com/keplerfrequency/spotify_map">https://github.com/keplerfrequency/spotify_map</a></p></h3>
   </section>
 
   <div id="return">
