Popup with more information
Added login and desktop warning

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="popup" class="popup">
         <div class="popup-content">
           <h3 style="color:#272727">Welcome to Spotify maps!</h3>
-          <p>On this site you can browse the selected playlists by each country, toggle whether it is Spotify or user made and search through the pre-chosen playlists.</p>
+          <p>On this site you can browse the selected playlists by each country, toggle whether it is Spotify or user made and search through the pre-chosen playlists. Login to Spotify to listen to the songs in full. Recommendation is to use on desktop.</p>
           <button onclick="closePopup()">Close</button>
         </div>
     </div>      
